feat: convert Fabric to use essential-multi-version